Fix whitespace

--- a/client/src/styles/SidebarContainer.css
+++ b/client/src/styles/SidebarContainer.css
@@ -143,7 +143,8 @@
   position: fixed;
   top: calc(88vh);
   height: 12vh;
-  margin-bottom: auto;
+  margin: none;
+  padding-bottom: 100%;
 }
 
 .collapse-btn {
